# welcome-robotframework

./: .gitignore  .gitpod.yml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
listener/: ReportListener.py
tests/booker/: restful_booker.robot
tests/login/: mfa_login.robot
tests/todo/: todo.robot
utilities/: gha_reporter.py  xom.py
