[tool.poetry]
name = "welcome-robotframework"
version = "0.1.0"
description = ""
authors = ["Many Kasiriha <many.kasiriha@gmail.com>"]
readme = "README.md"
packages = [{include = "welcome_robotframework"}]

[tool.poetry.dependencies]
python = "^3.10"
robotframework-browser = "^16.2.0"
robotframework-requests = "^0.9.4"
pyotp = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
