[tool.poetry]
name = "welcome-robotframework"
version = "0.1.0"
description = ""
authors = ["Many Kasiriha <many.kasiriha@gmail.com>"]
readme = "README.md"
packages = [{include = "welcome_robotframework"}]

[tool.poetry.dependencies]
python = "^3.10"
robotframework="*"
robotframework-browser = "*"
robotframework-requests = "*"
pyotp = "*"
robotframework-jsonlibrary = "*"
robotframework-soaplibrary = "*"
pytablewriter = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
